@@ -1,6 +1,7 @@
 Cacti CHANGELOG
 
 0.8.6j
+-bug#0000892: Sorting by Hostname
 -bug#0000842: SNMP v3 password fields does not check if entered passwords match 
 -bug#0000877: PHP 5.2.0 breaks Windows cmd.php poller
 -bug#0000884: graph_view.php lacks bottom nav bar
